# json

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  adl_serializer.hpp  cpp_utils.hpp  deserialize_functions.hpp  detected.hpp  input_adapter.hpp  iterator.hpp  json.hpp  json_fwd.hpp  json_type.hpp  lexer.hpp  macro.hpp  output_adapter.hpp  parser.hpp  serialize_functions.hpp  serializer.hpp  traits.hpp
test/: CMakeLists.txt  test_construction.cpp  test_getter.cpp  test_lexer.cpp  test_parser.cpp  test_ptr_getter.cpp  test_ref_getter.cpp  test_serializer.cpp
